--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 image: "https://drive.google.com/thumbnail?id=16LgNRIfJOhqOa_Au5ntwxWWNS5IptE4V&sz=w1000", // Enlace directo de Google Drive
                 emoji: "✍🏽",
                 name: "ASESORIAS PERSONALIZADAS",
-                description: "Aprende a hacer tus trabajos académicos sin enredos. Te ayudamos a organizar la información, mejorar la redacción y presentar trabajos claros, bien estructurados"
+                description: "Aprende a hacer tus trabajos académicos sin enredos. Te ayudo a organizar la información, mejorar la redacción,presentar trabajos claros y bien estructurados"
             }
         ];
 
