--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <ol style="margin-left: 20px; margin-top: 10px;">
                 <li>Mira los productos disponibles de tu MejorNota</li>
                 <li>Escribe al Whatsapp</li>               
-                <p style="margin-top: 10px;"><strong>💡 Recomendación:</strong>En el mensaje menciona el producto que deseas y te responderemos lo antes posible con la información y el precio.</p>
+                <p style="margin-top: 10px;"><strong>💡 Recomendación:</strong>En el mensaje menciona el producto que deseas y te respondere lo antes posible con la información y el precio.</p>
         </div>
 
         <div id="productsContainer" class="products-grid"></div>
