--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
         <div class="whatsapp-section">
             <h2 style="color: #333; margin-bottom: 15px;">¿Te interesa algún producto?</h2>
-            <p style="color: #666; margin-bottom: 25px; font-size: 1.1em;">Contáctanos por WhatsApp para más información y realizar tu pedido</p>
+            <p style="color: #666; margin-bottom: 25px; font-size: 1.1em;">Contáctame por WhatsApp para más información y realizar tu pedido</p>
             <a href="#" id="whatsappLink" class="whatsapp-button">
                 <span class="whatsapp-icon">📱</span>
                 Contactar por WhatsApp
@@ -207,7 +207,7 @@
                 image: "https://drive.google.com/thumbnail?id=16LgNRIfJOhqOa_Au5ntwxWWNS5IptE4V&sz=w1000", // Enlace directo de Google Drive
                 emoji: "✍🏽",
                 name: "ASESORIAS PERSONALIZADAS",
-                description: "Aprende a hacer tus trabajos académicos sin enredos. Te ayudo a organizar la información, mejorar la redacción,presentar trabajos claros y bien estructurados"
+                description: "Aprende a hacer tus trabajos académicos sin enredos. Te ayudo a organizar la información, mejorar la redacción,presentar trabajos claros y bien estructurados."
             }
         ];
 
